--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -6,7 +6,7 @@ import logo from '../assets/logo-wide.jpg'
 
 <nav class="border-gray-200 bg-white dark:bg-gray-900">
   <div class="mx-auto flex max-w-screen-xl flex-wrap items-center justify-between p-4">
-    <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
+    <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
       <Image src={logo} alt="Logo" height={64} />
       <span class="self-center whitespace-nowrap text-2xl font-semibold dark:text-white"
         >{config.site_name}</span
